# firehose-tap-dealhub

./: README.md  meltano.yml  pyproject.toml
tap_dealhub/: __init__.py  streams.py  tap.py
